# async-ffmpeg-sidecar

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  darwin.yml  ubuntu.yml  windows.yml
examples/: download_ffmpeg.rs  ffprobe.rs  test_exit.rs
src/: child.rs  comma_iter.rs  command.rs  download.rs  event.rs  ffprobe.rs  lib.rs  log_parser.rs  metadata.rs  paths.rs  pix_fmt.rs  stream.rs  test.rs  version.rs
