[package]
name = "async-ffmpeg-sidecar"
version = "0.0.4"
edition = "2021"
rust-version = "1.83.0"
description = "Wrap a standalone FFmpeg binary in an intiutive Stream interface."
authors = ["Tunahan Karlibas <dvt.tnhn.krlbs@icloud.com>"]
categories = ["multimedia"]
repository = "https://github.com/dvtkrlbs/async-ffmpeg-sidecar"
readme = "README.md"
license = "MIT"

[features]
default = ["download_ffmpeg", "rustls_tls"]
# rt is necessary for spawn_blocking since async zip crates has no high level api and I don't want to impolement zip extraction
download_ffmpeg = ["dep:reqwest", "tokio/fs", "tokio/rt", "dep:async_zip", "dep:sanitize-filename", "dep:astral-tokio-tar", "dep:async-compression"]
rustls_tls = ["reqwest/rustls-tls-native-roots"]
native_tls = ["reqwest/native-tls"]

[dependencies]
anyhow = "1.0.93"
futures-util = { version = "0.3.31", features = ["io"] }
tokio = { version = "1.41.1", features = ["process", "macros", "io-util", "rt-multi-thread"] }
reqwest = { version = "0.12.12", optional = true, default-features = false, features = ["stream", "http2", "charset", "macos-system-configuration"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
sanitize-filename = { version = "0.6.0", optional = true }
futures = "0.3.31"

[target.'cfg(not(target_os = "linux"))'.dependencies]
async_zip = { version = "0.0.17", features = ["full"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
astral-tokio-tar = { version = "0.5.6", optional = true }
async-compression = { version = "0.4.18", optional = true, features = ["xz", "tokio"] }
